Fix incorrect test assertions in ReinitialiseTableIT