@@ -64,7 +64,6 @@ import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Path;
 import java.time.Instant;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
@@ -168,7 +167,7 @@ public class ReinitialiseTableIT {
 
             // Then
             assertThat(dynamoStateStore.getActiveFiles()).isEmpty();
-            assertThat(dynamoStateStore.getReadyForGCFilenamesBefore(Instant.ofEpochMilli(Long.MAX_VALUE))).hasSize(1);
+            assertThat(dynamoStateStore.getReadyForGCFilenamesBefore(Instant.ofEpochMilli(Long.MAX_VALUE))).hasSize(0);
             assertThat(dynamoStateStore.getAllPartitions()).hasSize(3);
             assertThat(dynamoStateStore.getLeafPartitions()).hasSize(2);
             assertOnlyObjectsWithinPartitionsAndStateStoreFilesAreasInTheTableBucketHaveBeenDeleted();
@@ -186,7 +185,7 @@ public class ReinitialiseTableIT {
 
             // Then
             assertThat(dynamoStateStore.getActiveFiles()).isEmpty();
-            assertThat(dynamoStateStore.getReadyForGCFilenamesBefore(Instant.ofEpochMilli(Long.MAX_VALUE))).hasSize(1);
+            assertThat(dynamoStateStore.getReadyForGCFilenamesBefore(Instant.ofEpochMilli(Long.MAX_VALUE))).hasSize(0);
             assertThat(dynamoStateStore.getAllPartitions()).hasSize(1);
             assertThat(dynamoStateStore.getLeafPartitions()).hasSize(1);
             assertObjectsWithinPartitionsAndStateStoreAreaInTheTableBucketHaveBeenDeleted();
@@ -205,7 +204,7 @@ public class ReinitialiseTableIT {
 
             // Then
             assertThat(dynamoStateStore.getActiveFiles()).isEmpty();
-            assertThat(dynamoStateStore.getReadyForGCFilenamesBefore(Instant.ofEpochMilli(Long.MAX_VALUE))).hasSize(1);
+            assertThat(dynamoStateStore.getReadyForGCFilenamesBefore(Instant.ofEpochMilli(Long.MAX_VALUE))).hasSize(0);
             List<Partition> partitionsList = dynamoStateStore.getAllPartitions();
             assertThat(partitionsList).hasSize(5);
             assertThat(dynamoStateStore.getLeafPartitions()).hasSize(3);
@@ -229,7 +228,7 @@ public class ReinitialiseTableIT {
 
             // Then
             assertThat(dynamoStateStore.getActiveFiles()).isEmpty();
-            assertThat(dynamoStateStore.getReadyForGCFilenamesBefore(Instant.ofEpochMilli(Long.MAX_VALUE))).hasSize(1);
+            assertThat(dynamoStateStore.getReadyForGCFilenamesBefore(Instant.ofEpochMilli(Long.MAX_VALUE))).hasSize(0);
             List<Partition> partitionsList = dynamoStateStore.getAllPartitions();
             assertThat(partitionsList).hasSize(5);
             assertThat(dynamoStateStore.getLeafPartitions()).hasSize(3);
@@ -262,6 +261,7 @@ public class ReinitialiseTableIT {
             // Then
             assertS3StateStoreRevisionsDynamoTableNowHasCorrectVersions("1", "2");
             assertThat(s3StateStore.getActiveFiles()).isEmpty();
+            assertThat(s3StateStore.getReadyForGCFilenamesBefore(Instant.ofEpochMilli(Long.MAX_VALUE))).hasSize(0);
             assertThat(s3StateStore.getAllPartitions()).hasSize(3);
             assertThat(s3StateStore.getLeafPartitions()).hasSize(2);
             assertOnlyObjectsWithinPartitionsAndStateStoreFilesAreasInTheTableBucketHaveBeenDeleted();
@@ -281,6 +281,7 @@ public class ReinitialiseTableIT {
             assertS3StateStoreRevisionsDynamoTableNowHasCorrectVersions("1", "1");
 
             assertThat(s3StateStore.getActiveFiles()).isEmpty();
+            assertThat(s3StateStore.getReadyForGCFilenamesBefore(Instant.ofEpochMilli(Long.MAX_VALUE))).hasSize(0);
             assertThat(s3StateStore.getAllPartitions()).hasSize(1);
             assertThat(s3StateStore.getLeafPartitions()).hasSize(1);
 
@@ -303,6 +304,7 @@ public class ReinitialiseTableIT {
             assertS3StateStoreRevisionsDynamoTableNowHasCorrectVersions("1", "1");
 
             assertThat(s3StateStore.getActiveFiles()).isEmpty();
+            assertThat(s3StateStore.getReadyForGCFilenamesBefore(Instant.ofEpochMilli(Long.MAX_VALUE))).hasSize(0);
 
             List<Partition> partitionsList = s3StateStore.getAllPartitions();
             assertThat(partitionsList).hasSize(5);
@@ -330,6 +332,7 @@ public class ReinitialiseTableIT {
             assertS3StateStoreRevisionsDynamoTableNowHasCorrectVersions("1", "1");
 
             assertThat(s3StateStore.getActiveFiles()).isEmpty();
+            assertThat(s3StateStore.getReadyForGCFilenamesBefore(Instant.ofEpochMilli(Long.MAX_VALUE))).hasSize(0);
 
             List<Partition> partitionsList = s3StateStore.getAllPartitions();
             assertThat(partitionsList).hasSize(5);
@@ -509,9 +512,13 @@ public class ReinitialiseTableIT {
         setupPartitionsAndAddFileInfo(s3StateStore);
 
         // - Check S3StateStore is set up correctly
-        // - The revisions file should have two entries one for partitions and one for files and both should now be
-        //   set to version 2
-        assertS3StateStoreRevisionsDynamoTableNowHasCorrectVersions("2", "2");
+        // - The revisions file should have two entries one for partitions and one for files
+        // - Files revision should be 3 (add one file, atomically update that file to GC and make new active files)
+        // - Partitions revision should be 2
+        assertS3StateStoreRevisionsDynamoTableNowHasCorrectVersions("3", "2");
+
+        // - Check S3StateStore has 1 ready for GC file in
+        assertThat(s3StateStore.getReadyForGCFilenamesBefore(Instant.ofEpochMilli(Long.MAX_VALUE))).hasSize(1);
 
         // - Check S3StateStore has correct active files
         assertThat(s3StateStore.getActiveFiles()).hasSize(2);
@@ -533,7 +540,7 @@ public class ReinitialiseTableIT {
 
         FileInfo fileInfo1 = createFileInfo(file1, FileInfo.FileStatus.ACTIVE, rootPartition.getId());
         FileInfo fileInfo2 = createFileInfo(file2, FileInfo.FileStatus.ACTIVE, rootPartition.getId());
-        FileInfo fileInfo3 = createFileInfo(file3, FileInfo.FileStatus.READY_FOR_GARBAGE_COLLECTION, rootPartition.getId());
+        FileInfo fileInfo3 = createFileInfo(file3, FileInfo.FileStatus.ACTIVE, rootPartition.getId());
 
         //  - Split root partition
         PartitionTree tree = new PartitionsBuilder(KEY_VALUE_SCHEMA)
@@ -545,7 +552,8 @@ public class ReinitialiseTableIT {
                 tree.getPartition("root"), tree.getPartition("0" + "---eee"), tree.getPartition("eee---zzz"));
 
         //  - Update Dynamo state store with details of files
-        stateStore.addFiles(Arrays.asList(fileInfo1, fileInfo2, fileInfo3));
+        stateStore.addFiles(List.of(fileInfo3));
+        stateStore.atomicallyUpdateFilesToReadyForGCAndCreateNewActiveFiles(List.of(fileInfo3), List.of(fileInfo1, fileInfo2));
     }
 
     private FileInfo createFileInfo(String filename, FileInfo.FileStatus fileStatus, String partitionId) {
